# swc-plugin-webpack-chunk-names

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  build.sh  package.json  rust-toolchain.toml  rustfmt.toml
src/: lib.rs  tests.rs
