[package]
name = "swc-plugin-webpack-chunk-names"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
serde_json = "1"
swc_core = { version = "58.0.*", default-features = false, features = ["ecma_plugin_transform"] }

[profile.dev.package.'*']
debug = "full"
debug-assertions = true
strip = "none"
opt-level = 1

[profile.dev]
debug = "full"
build-override.debug = "full"
build-override.debug-assertions = true
build-override.strip = "none"
build-override.opt-level = 1
debug-assertions = true
strip = "none"
opt-level = 1
lto = "thin"
panic = "unwind"

[profile.release.package.'*']
debug = false
debug-assertions = false
strip = true
opt-level = "z"
codegen-units = 1
overflow-checks = false

[profile.release]
debug = false
build-override.debug = false
build-override.debug-assertions = false
build-override.strip = true
build-override.opt-level = "z"
build-override.codegen-units = 1
debug-assertions = false
strip = true
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
